--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6{
     font-weight: bold;
 }
 
-#mainHeader, #header{
+#header{
     padding: 10px 0px;
     background-color: white;
     /*border-radius: 5px;*/
@@ -81,3 +81,9 @@ h1, h2, h3, h4, h5, h6{
 #scheduleCol.panel-primary .panel-body{
     padding: 0;
 }
+
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 50%;
+      margin: auto;
+  }
